# ffmpeg_lessons

./: CMakeLists.txt  README.md
lesson_1/: CMakeLists.txt
lesson_1/src/: main.cpp
